<resources>
    <string name="app_name">Happy-Food-Delivery</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_lbl_login_account">Login to your \naccount</string>
    <string name="btn_lbl_log_in">Log in</string>
    <string name="txt_lbl_forget">Forget?</string>
    <string name="txt_lbl_no_account">Don\'t have an account?</string>
    <string name="txt_lbl_create_account">Create your \naccount</string>
    <string name="btn_lbl_sign_up">Sign up</string>
    <string name="txt_lbl_has_account">Already an account?</string>
    <string name="txt_lbl_terms_n_conditions">By clicking Sign up you agree to our \nTerms and Conditions</string>
    <string name="nav_lbl_restaurants">Restaurants</string>
    <string name="nav_lbl_offers">Offers</string>
    <string name="nav_lbl_profile">Account</string>
    <string name="txt_lbl_delivering_to">Delivering to</string>
    <string name="txt_lbl_current_location">Current Location</string>
    <string name="et_lbl_search_foods">Search foods</string>
    <string name="txt_lbl_popular_choices">Popular Choices</string>
    <string name="txt_lbl_show_all">Show all</string>
    <string name="txt_lbl_new_restaurants">New Restaurants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_lbl_user_name">Your Name</string>
    <string name="txt_lbl_your_email">Your Email</string>
    <string name="txt_lbl_your_phone">Your Phone</string>
    <string name="txt_lbl_city_or_state">City, State</string>
    <string name="txt_lbl_country">Country</string>
    <string name="txt_lbl_start_description">Discover the best foods from \nover 1,000 restaurants</string>
    <string name="btn_lbl_get_started">Get Started</string>
    <string name="btn_lbl_continue_with_facebook">Continue with Facebook</string>
    <string name="btn_lbl_create_account">Create Account</string>

    <string name="slider_lbl_foods">Find foods you love</string>
    <string name="slider_lbl_foods_desc">Discover the best foods from \nover 1,000 restaurants.</string>
    <string name="slider_lbl_fast_delivery">Fast Delivery</string>
    <string name="slider_lbl_fast_delivery_desc">Fast delivery to your home, office \nand wherever you are.</string>
    <string name="slider_lbl_live_tracking">Live Tracking</string>
    <string name="slider_lbl_live_tracking_desc">Real time tracking of your food \non the app after order</string>
    <string name="txt_lbl_add_more_foods">Add more foods</string>
    <string name="txt_lbl_add_notes">Add Notes</string>
    <string name="txt_lbl_delivery_instructions">Delivery Instructions</string>
    <string name="txt_lbl_subtotal">Subtotal</string>
    <string name="txt_lbl_delivery_cost">Delivery Cost</string>
    <string name="btn_lbl_check_out">Check Out</string>
    <string name="txt_lbl_thank_you">Thank you for \nyour order.</string>
    <string name="txt_lbl_track_order">You can track the delivery  \nin the \"Order\" section.</string>
    <string name="btn_lbl_track_my_order">Track my order</string>
    <string name="txt_lbl_order_something_else">Order something else</string>
    <string name="txt_lbl_save">Save</string>
</resources>