<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/margin_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/checkmark"
        android:layout_marginTop="@dimen/margin_xxlarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:gravity="center"
        android:text="@string/txt_lbl_thank_you"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:gravity="center"
        android:text="@string/txt_lbl_track_order"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_regular" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTrackMyOrder"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_lbl_track_my_order"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_medium_2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:gravity="center"
        android:text="@string/txt_lbl_order_something_else"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_medium_2"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>