<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:text="@string/txt_lbl_login_account"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_heading_2x"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:textStyle="bold"
        android:lineSpacingMultiplier="1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        app:cornerRadius="@dimen/margin_medium_2"
        android:text="@string/btn_lbl_log_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_regular_2x"
        android:backgroundTint="@color/colorAccent"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cvPassword"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_medium_2"
        app:cardCornerRadius="@dimen/margin_medium_2">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="Email"
            android:textSize="@dimen/text_regular"
            android:paddingStart="@dimen/margin_medium_2"
            android:background="@android:color/white"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnLogin"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_large"
        app:cardCornerRadius="@dimen/margin_medium_2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="Password"
                android:textSize="@dimen/text_regular"
                android:layout_toStartOf="@id/tvForget"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/margin_medium_2"
                />

            <TextView
                android:id="@+id/tvForget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_lbl_forget"
                android:textColor="@color/colorAccent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_lbl_no_account"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lbl_sign_up"
            android:paddingStart="@dimen/margin_medium"
            android:textSize="@dimen/text_regular"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</RelativeLayout>