<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyOrdersActivity">

    <FrameLayout
        android:id="@+id/flToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >

        <ImageView
            android:id="@+id/ivLeftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_chevron_left_24"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_medium_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="My Order"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular_2x"/>


    </FrameLayout>

    <include layout="@layout/item_new_restaurant"
        android:id="@+id/restaurantInfo"
        android:layout_below="@id/flToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_below="@id/restaurantInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_medium"
        tools:listitem="@layout/item_order"
        tools:itemCount="5"/>

    <TextView
        android:id="@+id/tvAddMoreFoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvOrders"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:text="@string/txt_lbl_add_more_foods"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/colorAccent"/>
    
    <View
        android:id="@+id/addMoreView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvAddMoreFoods"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="#D6D6D6"/>

    <TextView
        android:id="@+id/tvDeliveryInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:layout_below="@id/addMoreView"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/txt_lbl_delivery_instructions"
        android:layout_marginStart="@dimen/margin_medium_2"/>

    <TextView
        android:id="@+id/tvAddNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_baseline_add_24"
        android:drawableTint="@color/colorAccent"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignTop="@id/tvDeliveryInstructions"
        android:layout_alignParentEnd="true"
        android:text="@string/txt_lbl_add_notes"
        android:gravity="center_vertical"
        android:textColor="@color/colorAccent"/>

    <View
        android:id="@+id/addNotesView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvAddNotes"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="#D6D6D6"/>

    <TextView
        android:id="@+id/tvSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:layout_below="@id/addNotesView"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/txt_lbl_subtotal"
        android:layout_marginStart="@dimen/margin_medium_2"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignTop="@id/tvSubTotal"
        android:layout_alignParentEnd="true"
        android:text="$0"
        android:textStyle="bold"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/tvDeliveryCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:layout_below="@id/tvSubTotal"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/txt_lbl_delivery_cost"
        android:layout_marginStart="@dimen/margin_medium_2"/>

    <TextView
        android:id="@+id/tvCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignTop="@id/tvDeliveryCost"
        android:layout_alignParentEnd="true"
        android:text="Free"
        android:textStyle="bold"
        android:textColor="@color/primary_text"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/tvDeliveryCost"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="#D6D6D6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckOut"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_lbl_check_out"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_medium_2" />

</RelativeLayout>