<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LandingActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_medium_2"
        android:text="@string/btn_lbl_log_in"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_medium_2"
        android:backgroundTint="#E4E3E3"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/btn_lbl_continue_with_facebook"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        app:cornerRadius="@dimen/margin_medium_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@id/btnWithFacebook"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_lbl_create_account"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/margin_medium_2" />

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCreateAccount"
        android:layout_below="@id/tvLogin"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="1"
        app:sliderStartAutoCycle="true" />
</RelativeLayout>