<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.MaterialComponents.Light.DarkActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RestaurantsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDeliveringTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_delivering_to"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_regular" />

        <TextView
            android:id="@+id/tvCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDeliveringTo"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:text="@string/txt_lbl_current_location"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivDownArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tvCurrentLocation"
            android:layout_toEndOf="@id/tvCurrentLocation"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            app:tint="@color/colorAccent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCurrentLocation"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_toStartOf="@id/ivMenu"
            app:cardCornerRadius="@dimen/margin_medium_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:src="@drawable/ic_baseline_search_24" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    android:hint="@string/et_lbl_search_foods"
                    android:paddingStart="@dimen/margin_medium"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_regular" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCurrentLocation"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:src="@drawable/ic_baseline_menu_24"
            app:tint="@color/colorAccent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cvSearch"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="37"
            tools:listitem="@layout/item_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rvCategory"
            tools:listitem="@layout/item_restaurant" />

    </RelativeLayout>

</ScrollView>